--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJJ0JLNGDJ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-HJJ0JLNGDJ');
+        </script>
         <title>Zimeng Lyu</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="author" content="Zimeng Lyu"/>
-        <meta name="description" content="Neeraj's little corner of the internet.">
+        <meta name="description" content="Zimeng's little corner of the internet.">
         <meta property="og:locale" content="en_US"/>
         <meta property="og:title" content="Zimeng Lyu"/>
         <meta property="og:url" content="https://zimenglyu.com/"/>
@@ -43,14 +46,13 @@
                 <h2>Industry</h2>
                 <ul>
                     <li>
-                        AI Infra Privacy &amp;Security, Ads Data Services at <a href="https://facebook.com/">Facebook</a>
+                        Placeholder
                     </li>
                 </ul>
                 <h2>Research</h2>
                 <ul>
                     <li>
-                        <a href="https://zimenglyu.com.com/doc/20-DSML-pytorchfi.pdf">DNN reliability and resilience </a>
-                        research in <a href="http://rsim.cs.illinois.edu/">RSim Research Group</a>
+                        Placeholder
                     </li>
                 </ul>
             </section>
