--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <body>
         <div class="wrapper">
             <header>
+                <img src="img/profile.jpg" alt="profile-picture"/>
                 <h1>Zimeng Lyu</h1>
                 <!-- <p>
                     <a href="https://blog.zimenglyu.com/">Blog</a>
@@ -41,18 +42,23 @@
                 </p>
             </header>
             <section>
-                <img src="img/profile.jpg" alt="profile-picture"/>
                 <p>Hi my name is Zimeng. I am currently pursueing my PhD in Computer Science. My focus is in Neurevolution and Machine Learning.</p>
                 <h2>Industry</h2>
                 <ul>
                     <li>
-                        Placeholder
+                        Placeholder for work experiences e.g. Quantifly
                     </li>
                 </ul>
                 <h2>Research</h2>
                 <ul>
                     <li>
-                        Placeholder
+                        Placeholder for team group
+                    </li>
+                </ul>
+                <h2>News</h2>
+                <ul>
+                    <li>
+                        Placeholder for 2020 - Outstanding student Gecco
                     </li>
                 </ul>
             </section>
