--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <meta property="og:image" content="https://zimenglyu.com/img/profile.jpg"/>
         <meta property="og:site_name" content="Zimeng Lyu"/>
         <meta property="og:description" content="Zimeng's little corner of the internet."/>
+        <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet"> -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet"/>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
         <link rel="canonical" href="https://zimenglyu.com/">
@@ -25,7 +27,7 @@
     <body>
         <div class="wrapper">
             <header>
-                <img src="img/profile.jpg" alt="profile-picture"/>
+                <!-- <img src="img/profile.jpg" alt="profile-picture"/> -->
                 <h1>Zimeng Lyu</h1>
                 <!-- <p>
                     <a href="https://blog.zimenglyu.com/">Blog</a>
@@ -37,29 +39,54 @@
                     <a href="https://www.linkedin.com/in/zimenglyu/">LinkedIn</a>
                 </p>
                 <p>
-                    <a href="https://zimenglyu.com.com/doc/resume.pdf">CV</a>
-                    \ <a href="https://zimenglyu.com.com/doc/resume.pdf">Resume</a>
+                    <a href="https://scholar.google.com/citations?user=Rj5sUgkAAAAJ&hl=en">Google Scholer</a>
+                    <!-- \ <a href="https://zimenglyu.com.com/doc/resume.pdf">Resume</a> -->
                 </p>
             </header>
             <section>
-                <p>Hi my name is Zimeng. I am currently pursueing my PhD in Computer Science. My focus is in Neurevolution and Machine Learning.</p>
-                <h2>Industry</h2>
+                <p>Hi my name is Zimeng. I am a PhD student in <a href="https://www.rit.edu/computing/">B. Thomas Golisano College of Computing and Information Sciences</a> at <a href="https://www.rit.edu/">Rochester Institute of Technology</a>.</p>
+                <!-- <p></p> -->
+                <!-- <h2>Industry</h2>
                 <ul>
                     <li>
                         Placeholder for work experiences e.g. Quantifly
                     </li>
-                </ul>
+                </ul> -->
                 <h2>Research</h2>
                 <ul>
-                    <li>
-                        Placeholder for team group
-                    </li>
+                    My advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. And my research focus on NeuroEvolution neural architecture search.
+                    <!-- <li>
+                        NeuroEvolution neural architecture search on 
+                    </li> -->
                 </ul>
                 <h2>News</h2>
                 <ul>
                     <li>
-                        Placeholder for 2020 - Outstanding student Gecco
+                        I am selected as one of the <a href="http://www.evostar.org/2021/outstanding-students-of-2021/">Outstanding Students</a> in Evostar 2021 Conference.
                     </li>
+                </ul>
+                <h2>Pulications</h2>
+                <ul>
+                    <li>
+                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. [An Experimental Study of Weight Initialization and Lamarckian Inheritance on Neuroevolution. The 24th International Conference on the Applications of Evolutionary Computation] (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
+                    </li>
+                    <li>
+                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
+                    </li>
+                    <li>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
+                    </li>
+                    <li>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander Ororbia and Travis Desell. Improving Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation. The Genetic and Evolutionary Computation Conference (GECCO 2020). Cancun, Mexico. July 8-12, 2020. Best paper nominee.
+                    </li>
+                    <li>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia and Travis Desell. Neuro-Evolutionary Transfer Learning through Structural Adaptation. The 23nd International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2020). Seville, Spain. April 15-17, 2020.
+                    </li>
+                    <li>
+                        Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan and Steve Benson. Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks. at - Automatisierungstechnik. Volume 68: No 2, Pages 130-139. January, 2020.
+                    </li>
+
+
                 </ul>
             </section>
         </div>
