--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                     </li>
                 </ul> -->
                 <h2>Research</h2>
-                <ul>
+                <p>
                     My advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. And my research focus on NeuroEvolution neural architecture search.
                     <!-- <li>
                         NeuroEvolution neural architecture search on 
                     </li> -->
-                </ul>
+                </p>
                 <h2>News</h2>
                 <ul>
                     <li>
@@ -68,7 +68,7 @@
                 <h2>Pulications</h2>
                 <ul>
                     <li>
-                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. [An Experimental Study of Weight Initialization and Lamarckian Inheritance on Neuroevolution. The 24th International Conference on the Applications of Evolutionary Computation] (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
+                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. An Experimental Study of Weight Initialization and Lamarckian Inheritance on Neuroevolution. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
                     </li>
                     <li>
                         Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
