--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </p>
             </header>
             <section>
-                <p>Hi my name is Zimeng. I am a PhD student in <a href="https://www.rit.edu/computing/">B. Thomas Golisano College of Computing and Information Sciences</a> at <a href="https://www.rit.edu/">Rochester Institute of Technology</a>.</p>
+                <p>Hi my name is Zimeng Lyu. I am a PhD student in the <a href="https://www.rit.edu/computing/">B. Thomas Golisano College of Computing and Information Sciences</a> at <a href="https://www.rit.edu/">Rochester Institute of Technology</a>.</p>
                 <!-- <p></p> -->
                 <!-- <h2>Industry</h2>
                 <ul>
@@ -54,7 +54,7 @@
                 </ul> -->
                 <h2>Research</h2>
                 <p>
-                    My advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. And my research focus on NeuroEvolution neural architecture search.
+                    My research advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. And my research focuses on NeuroEvolution neural architecture search.
                     <!-- <li>
                         NeuroEvolution neural architecture search on 
                     </li> -->
@@ -62,11 +62,11 @@
                 <h2>News</h2>
                 <ul>
                     <li>
-                        I am selected as one of the <a href="http://www.evostar.org/2021/outstanding-students-of-2021/">Outstanding Students</a> in Evostar 2021 Conference.
+                        Jan 2021 - <a href="http://www.evostar.org/2021/outstanding-students-of-2021/">Evostar 2021 Outstanding Student</a> 
                     </li>
                 </ul>
                 <h2>Pulications</h2>
-                <ul>
+                <ul class="pub-ul">
                     <li>
                         Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. An Experimental Study of Weight Initialization and Lamarckian Inheritance on Neuroevolution. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
                     </li>
