--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
                         Jan 2021 - <a href="http://www.evostar.org/2021/outstanding-students-of-2021/">Evostar 2021 Outstanding Student</a> 
                     </li>
                 </ul>
-                <h2>Pulications</h2>
+                <h2>Blog</h2>
+                <ul>
+                    <li>
+                        TensorFlow Lite, Android NDK (<a href="markdown.html?post=2018-11-27-tflite-android-ndk-eng.markdown">ENG</a>, <a href="markdown.html?post=2018-11-27-tflite-android-ndk-chn.markdown">中文</a>)
+                    </li>
+                </ul>
+                <h2>Publications</h2>
                 <ul class="pub-ul">
                     <li>
                         Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. An Experimental Study of Weight Initialization and Lamarckian Inheritance on Neuroevolution. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
