--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h2>Blog</h2>
                 <ul>
                     <li>
-                        TensorFlow Lite, Android NDK (<a href="markdown.html?post=2018-11-27-tflite-android-ndk-eng.markdown">ENG</a>, <a href="markdown.html?post=2018-11-27-tflite-android-ndk-chn.markdown">中文</a>)
+                        TensorFlow Lite, Android NDK (<a href="markdown.html?post=2018-11-27-tflite-android-ndk-eng">ENG</a>, <a href="markdown.html?post=2018-11-27-tflite-android-ndk-chn">中文</a>)
                     </li>
                 </ul>
                 <h2>Publications</h2>
