--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                         Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
                     </li>
                     <li>
+                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. ACM Workshop on NeuroEvolution@Work (NEWK@Work), held in conjunction with ACM Genetic and Evolutionary Computation Conference (GECCO). Lille, France. July 10-14, 2021.
+                    </li>
+                    <li>
                         AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
                     </li>
                     <li>
@@ -85,7 +88,11 @@
                     <li>
                         Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan and Steve Benson. Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks. at - Automatisierungstechnik. Volume 68: No 2, Pages 130-139. January, 2020.
                     </li>
-
+                
+                <h2>Posts</h2>
+                    <li>
+                        
+                    </li>
 
                 </ul>
             </section>
