edited the main page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:locale" content="en_US"/>
         <meta property="og:title" content="Zimeng Lyu"/>
         <meta property="og:url" content="https://zimenglyu.com/"/>
-        <meta property="og:image" content="https://zimenglyu.com/img/profile.jpg"/>
+        {% comment %} <meta property="og:image" content="https://zimenglyu.com/img/profile.jpg"/> {% endcomment %}
         <meta property="og:site_name" content="Zimeng Lyu"/>
         <meta property="og:description" content="Zimeng's little corner of the internet."/>
         <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -54,7 +54,9 @@
                 </ul> -->
                 <h2>Research</h2>
                 <p>
-                    My research advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. And my research focuses on NeuroEvolution neural architecture search.
+                    My research interests are Time Series Forecasting with Machine Learning, and NeuroEvolution Neural Architecture Search.
+                <p>
+                    My advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. 
                     <!-- <li>
                         NeuroEvolution neural architecture search on 
                     </li> -->
@@ -80,7 +82,7 @@
                         Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
                     </li>
                     <li>
-                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. ACM Workshop on NeuroEvolution@Work (NEWK@Work), held in conjunction with ACM Genetic and Evolutionary Computation Conference (GECCO). Lille, France. July 10-14, 2021.
+                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. In Proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 1735-1743. July 2021. Lille, France. July 10-14, 2021.
                     </li>
                     <li>
                         AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
