--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </p>
                 <p>
                     <a href="https://scholar.google.com/citations?user=Rj5sUgkAAAAJ&hl=en">Google Scholer</a>
-                    <!-- \ <a href="https://zimenglyu.com.com/doc/resume.pdf">Resume</a> -->
+                    <!-- \ <a href="https://zimenglyu.com.com/doc/resume.[pdf]">Resume</a> -->
                 </p>
             </header>
             <section>
@@ -75,25 +75,37 @@
                 <h2>Publications</h2>
                 <ul class="pub-ul">
                     <li>
-                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. An Experimental Study of Weight Initialization and Lamarckian Inheritance on Neuroevolution. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
+                        Zimeng Lyu and Travis Desell. ONE-NAS: An Online NeuroEvolution based Neural Architecture Search for Time Series Forecasting. The Genetic and Evolutionary Computation Conference (GECCO 2022). Boston, USA. July 9-13, 2022. <a href="papers/2022_gecco_onenas.pdf">[pdf]</a> <a href="papers/2022_gecco_poster.pdf">[poster]</a>
                     </li>
                     <li>
-                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
+                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer, and Travis Desell. An experimental study of weight initialization and Lamarckian inheritance on neuroevolution. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 584-600. Springer, Cham, 2021. <a href="papers/2021_EvoStar_Weight_initialization.pdf">[pdf]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>                  
                     </li>
                     <li>
-                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. In Proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 1735-1743. July 2021. Lille, France. July 10-14, 2021.
+                        Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid, Mohamed Mkaouer, and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 568-583. Springer, Cham, 2021. <a href="papers/2021_EvoStar_Repopulation.pdf">[pdf]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>
                     </li>
                     <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021.
+                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. In Proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 1735-1743. July 2021. Lille, France. July 10-14, 2021. <a href="papers/2021_Gecco_NEWK_Work_Workshop_Zimeng.pdf">[pdf]</a>
                     </li>
                     <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander Ororbia and Travis Desell. Improving Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation. The Genetic and Evolutionary Computation Conference (GECCO 2020). Cancun, Mexico. July 8-12, 2020. Best paper nominee.
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021. <a href="https://arxiv.org/abs/2011.10831">[pdf]</a>
                     </li>
                     <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia and Travis Desell. Neuro-Evolutionary Transfer Learning through Structural Adaptation. The 23nd International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2020). Seville, Spain. April 15-17, 2020.
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander Ororbia and Travis Desell. Improving Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation. The Genetic and Evolutionary Computation Conference (GECCO 2020). Cancun, Mexico. July 8-12, 2020. Best paper nominee. <a href="papers/2020_gecco_transfer.pdf">[pdf]</a>
                     </li>
                     <li>
-                        Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan and Steve Benson. Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks. at - Automatisierungstechnik. Volume 68: No 2, Pages 130-139. January, 2020.
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia and Travis Desell. Neuro-Evolutionary Transfer Learning through Structural Adaptation. The 23nd International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2020). Seville, Spain. April 15-17, 2020. <a href="papers/2020_evostar_transfer.pdf">[pdf]</a>
+                    </li>
+                    <li>
+                        Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan and Steve Benson. Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks. at - Automatisierungstechnik. Volume 68: No 2, Pages 130-139. January, 2020. <a href="https://www.degruyter.com/document/doi/10.1515/auto-2019-0116/html">[link]</a> 
+                    </li>
+                    <li>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. arXiv: Computation and Language (cs.CL). November, 2020. <a href="https://arxiv.org/abs/2011.10831">[link]</a> 
+                    </li>
+                    <li>
+                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. A Experimental Study of Weight Initialization and Weight Inheritance Effects on Neuroevolution. arXiv: Computation and Language (cs.CL). September, 2020. <a href="https://arxiv.org/abs/2009.09644">[link]</a> 
+                    </li>
+                    <li>
+                        Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid and Travis Desell. Improving Neuroevolution Using Island Extinction and Repopulation. arXiv: Neural and Evolutionary Computing (cs.NE). May, 2020. <a href="https://arxiv.org/abs/2005.07376">[link]</a> 
                     </li>
 
 
