update profile img and publications

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <div class="wrapper">
             <header>
-                <!-- <img src="img/profile.jpg" alt="profile-picture"/> -->
+                <img src="img/profile.png" alt="profile-picture"/>
                 <h1>Zimeng Lyu</h1>
                 <!-- <p>
                     <a href="https://blog.zimenglyu.com/">Blog</a>
@@ -51,9 +51,16 @@
                         Placeholder for work experiences e.g. Quantifly
                     </li>
                 </ul> -->
-                <h2>Research</h2>
+                <h2>Research Topics</h2>
                 <p>
-                    My research interests are Time Series Forecasting with Machine Learning, and NeuroEvolution Neural Architecture Search.
+                    Online and Offline Time Series Forecasting, Stock Return Predictions.
+                </p>
+                <p>
+                    NeuroEvolution, Neural Architecture Search.
+                </p>
+                <p>
+                    Minimally Supervised Learning, Semi-Supervised learning, Self Organizing Maps.
+                </p>
                 <p>
                     My advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. 
                     <!-- <li>
@@ -73,10 +80,24 @@
                     </li>
                 </ul>
                 <h2>Publications</h2>
+                <h3>Journal Articles</h3>
+                <ul class="pub-ul">
+                    <li>
+                        Zimeng Lyu, Alexander Ororbia and Travis Desell. Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting. Applied Soft Computing. June, 2023. <a href="https://www.sciencedirect.com/science/article/pii/S1568494623005409?casa_token=TZGtQKoJ9cgAAAAA:lYk_74vu2QECxHbyNUeYrmU_AtLTn8yFrp6A6Fk-zNDNvE-WL7i8xOS6Z9KPKN22n7NhmzTS">[link]</a> 
+                    </li>
+                    <li>
+                        AbdElRahman ElSaid, Karl Ricanek, Zimeng Lyu, Alexander Ororbia, Travis Desell. Backpropagation-free 4D continuous ant-based neural topology search. Applied Soft Computing. August, 2023. <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462300755X">[link]</a>
+                    </li>
+                    <li>
+                        Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan and Steve Benson. Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks. at - Automatisierungstechnik. Volume 68: No 2, Pages 130-139. January, 2020. <a href="https://www.degruyter.com/document/doi/10.1515/auto-2019-0116/html">[link]</a>
+                    </li>
+                </ul>
+                <h3>Conference Proceedings</h3>
                 <ul class="pub-ul">
                     <li>
                         Zimeng Lyu and Travis Desell. ONE-NAS: An Online NeuroEvolution based Neural Architecture Search for Time Series Forecasting. The Genetic and Evolutionary Computation Conference (GECCO 2022). Boston, USA. July 9-13, 2022. <a href="papers/2022_gecco_onenas.pdf">[pdf]</a> <a href="papers/2022_gecco_poster.pdf">[poster]</a>
                     </li>
+
                     <li>
                         Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer, and Travis Desell. An experimental study of weight initialization and Lamarckian inheritance on neuroevolution. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 584-600. Springer, Cham, 2021. <a href="papers/2021_EvoStar_Weight_initialization.pdf">[pdf]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>                  
                     </li>
@@ -87,6 +108,12 @@
                         Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. In Proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 1735-1743. July 2021. Lille, France. July 10-14, 2021. <a href="papers/2021_Gecco_NEWK_Work_Workshop_Zimeng.pdf">[pdf]</a>
                     </li>
                     <li>
+                        Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, and Travis Desell. Efficient Neuroevolution using Island Repopulation and Simplex Hyperparameter Optimization. The 2023 IEEE Symposium Series on Computational Intelligence (SSCI 2023). Mexico City, Mexico. December 5-8, 2023. h5-index: 29. <a href="https://ieeexplore.ieee.org/abstract/document/10371872">[link]</a>
+                    </li>
+                    <li>
+                        Amit Dilip Kini∗, Swaraj Sambhaji Yadav∗, Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, and Travis Desell. Co-evolving Recurrent Neural Networks and their Hyperparameters with Simplex Hyperparameter Optimization. The Genetic and Evolutionary Computation Conference Companion (GECCO ’23 Companion). Lisbon, Portugal. July 15–19, 2023. *Indicates equal contribution. h5-index: 29. <a href="https://dl.acm.org/doi/abs/10.1145/3583133.3596407">[link]</a>
+                    </li>
+                    <li>
                         AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021. <a href="https://arxiv.org/abs/2011.10831">[pdf]</a>
                     </li>
                     <li>
@@ -95,11 +122,14 @@
                     <li>
                         AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia and Travis Desell. Neuro-Evolutionary Transfer Learning through Structural Adaptation. The 23nd International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2020). Seville, Spain. April 15-17, 2020. <a href="papers/2020_evostar_transfer.pdf">[pdf]</a>
                     </li>
+                </ul>
+                <h3>Preprints</h3>
+                <ul class="pub-ul">
                     <li>
-                        Travis Desell, AbdElRahman ElSaid, Zimeng Lyu, David Stadem, Shuchita Patwardhan and Steve Benson. Long Term Predictions of Coal Fired Power Plant Data Using Evolved Recurrent Neural Networks. at - Automatisierungstechnik. Volume 68: No 2, Pages 130-139. January, 2020. <a href="https://www.degruyter.com/document/doi/10.1515/auto-2019-0116/html">[link]</a> 
+                        Zimeng Lyu, Alexander Ororbia and Travis Desell. Minimally Supervised Learning using Topological Projections in Self-Organizing Maps. arXiv: Machine Learning (cs.ML). January, 2024. <a href="https://arxiv.org/abs/2401.06923">[link]</a> 
                     </li>
                     <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. arXiv: Computation and Language (cs.CL). November, 2020. <a href="https://arxiv.org/abs/2011.10831">[link]</a> 
+                        Zimeng Lyu, Pujan Thapa and Travis Desell. Minimally Supervised Topological Projections of Self-Organizing Maps for Phase of Flight Identification. arXiv: Machine Learning (cs.ML). February, 2024. <a href="https://arxiv.org/abs/2402.11185">[link]</a>
                     </li>
                     <li>
                         Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer and Travis Desell. A Experimental Study of Weight Initialization and Weight Inheritance Effects on Neuroevolution. arXiv: Computation and Language (cs.CL). September, 2020. <a href="https://arxiv.org/abs/2009.09644">[link]</a> 
@@ -107,6 +137,10 @@
                     <li>
                         Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid and Travis Desell. Improving Neuroevolution Using Island Extinction and Repopulation. arXiv: Neural and Evolutionary Computing (cs.NE). May, 2020. <a href="https://arxiv.org/abs/2005.07376">[link]</a> 
                     </li>
+                    <li>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. arXiv: Computation and Language (cs.CL). November, 2020. <a href="https://arxiv.org/abs/2011.10831">[link]</a> 
+                    </li>
+
 
 
                 </ul>
