--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="wrapper">
             <header>
                 <img src="img/profile.png" alt="profile-picture"/>
-                <h1>Zimeng Lyu</h1>
+                <h4>Zimeng Lyu</h4>
                 <!-- <p>
                     <a href="https://blog.zimenglyu.com/">Blog</a>
                 </p> -->
@@ -43,6 +43,8 @@
                 </p>
             </header>
             <section>
+                <h2>About Me</h2>
+                <!-- <ul class="pub-ul"></ul> -->
                 <p>Hi my name is Zimeng Lyu. I am a PhD student in the <a href="https://www.rit.edu/computing/">B. Thomas Golisano College of Computing and Information Sciences</a> at <a href="https://www.rit.edu/">Rochester Institute of Technology</a>.</p>
                 <!-- <p></p> -->
                 <!-- <h2>Industry</h2>
@@ -59,7 +61,7 @@
                     NeuroEvolution, Neural Architecture Search.
                 </p>
                 <p>
-                    Minimally Supervised Learning, Semi-Supervised learning, Self Organizing Maps.
+                    Minimally Supervised Learning, Self Organizing Maps.
                 </p>
                 <p>
                     My advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. 
@@ -95,17 +97,17 @@
                 <h3>Conference Proceedings</h3>
                 <ul class="pub-ul">
                     <li>
-                        Zimeng Lyu and Travis Desell. ONE-NAS: An Online NeuroEvolution based Neural Architecture Search for Time Series Forecasting. The Genetic and Evolutionary Computation Conference (GECCO 2022). Boston, USA. July 9-13, 2022. <a href="papers/2022_gecco_onenas.pdf">[pdf]</a> <a href="papers/2022_gecco_poster.pdf">[poster]</a>
+                        Zimeng Lyu and Travis Desell. ONE-NAS: An Online NeuroEvolution based Neural Architecture Search for Time Series Forecasting. The Genetic and Evolutionary Computation Conference (GECCO 2022). Boston, USA. July 9-13, 2022. <a href="https://dl.acm.org/doi/abs/10.1145/3520304.3528962?casa_token=sZla5Lgn2mkAAAAA:ntQmTJiV4SrZRDsIPlAl72xAJlIM3y8D9gl2O1Eog0dlNChPOOCXjL2TkNTFOV2GrRFhI6-Roroe">[link]</a> <a href="papers/2022_gecco_poster.pdf">[poster]</a>
                     </li>
 
                     <li>
-                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer, and Travis Desell. An experimental study of weight initialization and Lamarckian inheritance on neuroevolution. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 584-600. Springer, Cham, 2021. <a href="papers/2021_EvoStar_Weight_initialization.pdf">[pdf]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>                  
+                        Zimeng Lyu, AbdElRahman ElSaid, Joshua Karns, Mohamed Mkaouer, and Travis Desell. An experimental study of weight initialization and Lamarckian inheritance on neuroevolution. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 584-600. Springer, Cham, 2021. <a href="papers/2021_EvoStar_Weight_initialization.pdf">[link]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>                  
                     </li>
                     <li>
-                        Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid, Mohamed Mkaouer, and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 568-583. Springer, Cham, 2021. <a href="papers/2021_EvoStar_Repopulation.pdf">[pdf]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>
+                        Zimeng Lyu, Joshua Karns, AbdElRahman ElSaid, Mohamed Mkaouer, and Travis Desell. Improving Distributed Neuroevolution Using Island Extinction and Repopulation. In International Conference on the Applications of Evolutionary Computation (Part of EvoStar), pp. 568-583. Springer, Cham, 2021. <a href="https://link.springer.com/chapter/10.1007/978-3-030-72699-7_37">[link]</a> <a href="papers/2021_evostar_poster.pdf">[poster]</a>
                     </li>
                     <li>
-                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. In Proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 1735-1743. July 2021. Lille, France. July 10-14, 2021. <a href="papers/2021_Gecco_NEWK_Work_Workshop_Zimeng.pdf">[pdf]</a>
+                        Zimeng Lyu, Shuchita Patwardhan, David Stadem, James Langfeld, Steve Benson, and Travis Desell. Neuroevolution of Recurrent Neural Networks for Time Series Forecasting of Coal-Fired Power Plant Data. In Proceedings of the Genetic and Evolutionary Computation Conference Companion, pp. 1735-1743. July 2021. Lille, France. July 10-14, 2021. <a href="https://dl.acm.org/doi/abs/10.1145/3449726.3463196?casa_token=5k-_g7DVd18AAAAA:kZTfuhCM39FH5HxgKSKzW3h3Vi1xUk5zwVTOvIFt0clKQU8xOY98h7NojeQnpDykfgli1tjpBLkw">[link]</a>
                     </li>
                     <li>
                         Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, and Travis Desell. Efficient Neuroevolution using Island Repopulation and Simplex Hyperparameter Optimization. The 2023 IEEE Symposium Series on Computational Intelligence (SSCI 2023). Mexico City, Mexico. December 5-8, 2023. h5-index: 29. <a href="https://ieeexplore.ieee.org/abstract/document/10371872">[link]</a>
@@ -114,13 +116,13 @@
                         Amit Dilip Kini∗, Swaraj Sambhaji Yadav∗, Aditya Shankar Thakur, Akshar Bajrang Awari, Zimeng Lyu, and Travis Desell. Co-evolving Recurrent Neural Networks and their Hyperparameters with Simplex Hyperparameter Optimization. The Genetic and Evolutionary Computation Conference Companion (GECCO ’23 Companion). Lisbon, Portugal. July 15–19, 2023. *Indicates equal contribution. h5-index: 29. <a href="https://dl.acm.org/doi/abs/10.1145/3583133.3596407">[link]</a>
                     </li>
                     <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021. <a href="https://arxiv.org/abs/2011.10831">[pdf]</a>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Alexander Ororbia and Travis Desell. Continuous Ant-Based Neural Topology Search. The 24th International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2021). Online. April 7-9, 2021. <a href="https://arxiv.org/abs/2011.10831">[link]</a>
                     </li>
                     <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander Ororbia and Travis Desell. Improving Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation. The Genetic and Evolutionary Computation Conference (GECCO 2020). Cancun, Mexico. July 8-12, 2020. Best paper nominee. <a href="papers/2020_gecco_transfer.pdf">[pdf]</a>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander Ororbia and Travis Desell. Improving Neuroevolutionary Transfer Learning of Deep Recurrent Neural Networks through Network-Aware Adaptation. The Genetic and Evolutionary Computation Conference (GECCO 2020). Cancun, Mexico. July 8-12, 2020. Best paper nominee. <a href="https://dl.acm.org/doi/abs/10.1145/3377930.3390193">[link]</a>
                     </li>
                     <li>
-                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia and Travis Desell. Neuro-Evolutionary Transfer Learning through Structural Adaptation. The 23nd International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2020). Seville, Spain. April 15-17, 2020. <a href="papers/2020_evostar_transfer.pdf">[pdf]</a>
+                        AbdElRahman ElSaid, Joshua Karns, Zimeng Lyu, Daniel Krutz, Alexander G. Ororbia and Travis Desell. Neuro-Evolutionary Transfer Learning through Structural Adaptation. The 23nd International Conference on the Applications of Evolutionary Computation (EvoStar: EvoApps 2020). Seville, Spain. April 15-17, 2020. <a href="https://link.springer.com/chapter/10.1007/978-3-030-43722-0_39">[link]</a>
                     </li>
                 </ul>
                 <h3>Preprints</h3>
