--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     Minimally Supervised Learning, Self Organizing Maps.
                 </p>
                 <p>
-                    My advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. 
+                    My research advisor is <a href="http://www.se.rit.edu/~travis/index.php">Travis Desell</a>. 
                     <!-- <li>
                         NeuroEvolution neural architecture search on 
                     </li> -->
@@ -72,15 +72,19 @@
                 <h2>News</h2>
                 <ul>
                     <li>
+                        June 2023 - Applied Soft Computing Journal Paper Accepted: <a herf="https://www.sciencedirect.com/science/article/pii/S1568494623005409?casa_token=TZGtQKoJ9cgAAAAA:lYk_74vu2QECxHbyNUeYrmU_AtLTn8yFrp6A6Fk-zNDNvE-WL7i8xOS6Z9KPKN22n7NhmzTS">[Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting]</a>
+                    </li>
+
+                    <li>
                         Jan 2021 - <a href="http://www.evostar.org/2021/outstanding-students-of-2021/">Evostar 2021 Outstanding Student</a> 
                     </li>
                 </ul>
-                <h2>Blog</h2>
+                <!-- <h2>Blog</h2>
                 <ul>
                     <li>
                         TensorFlow Lite, Android NDK (<a href="posts/2018-11-27-tflite-android-ndk-eng">ENG</a>, <a href="posts/2018-11-27-tflite-android-ndk-chn">中文</a>)
                     </li>
-                </ul>
+                </ul> -->
                 <h2>Publications</h2>
                 <h3>Journal Articles</h3>
                 <ul class="pub-ul">
