--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <div class="wrapper">
             <header>
-                <img src="img/profile.png" alt="profile-picture"/>
+                <img src="img/profile.jpg" alt="profile-picture"/>
                 <h4>Zimeng Lyu</h4>
                 <!-- <p>
                     <a href="https://blog.zimenglyu.com/">Blog</a>
@@ -72,6 +72,9 @@
                 <h2>News</h2>
                 <ul>
                     <li>
+                        April 2024 - WCCI IJCNN acceptance.
+
+                    <li>
                         June 2023 - Applied Soft Computing Journal Paper Accepted: <a herf="https://www.sciencedirect.com/science/article/pii/S1568494623005409?casa_token=TZGtQKoJ9cgAAAAA:lYk_74vu2QECxHbyNUeYrmU_AtLTn8yFrp6A6Fk-zNDNvE-WL7i8xOS6Z9KPKN22n7NhmzTS">[Online Evolutionary Neural Architecture Search for Multivariate Non-Stationary Time Series Forecasting]</a>
                     </li>
 
@@ -100,6 +103,9 @@
                 </ul>
                 <h3>Conference Proceedings</h3>
                 <ul class="pub-ul">
+                    <li>
+                        Zimeng Lyu, Pujan Thapa and Travis Desell. Minimally Supervised Topological Projections of Self-Organizing Maps for Phase of Flight Identification. WCCI IJCNN 2024. July, 2024. <a href="https://arxiv.org/abs/2402.11185">[link]</a>
+                    </li>
                     <li>
                         Zimeng Lyu and Travis Desell. ONE-NAS: An Online NeuroEvolution based Neural Architecture Search for Time Series Forecasting. The Genetic and Evolutionary Computation Conference (GECCO 2022). Boston, USA. July 9-13, 2022. <a href="https://dl.acm.org/doi/abs/10.1145/3520304.3528962?casa_token=sZla5Lgn2mkAAAAA:ntQmTJiV4SrZRDsIPlAl72xAJlIM3y8D9gl2O1Eog0dlNChPOOCXjL2TkNTFOV2GrRFhI6-Roroe">[link]</a> <a href="papers/2022_gecco_poster.pdf">[poster]</a>
                     </li>
